--- a/ind.html
+++ b/ind.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contacto - NivelMat</title>
+  <style>
+    body { font-family: sans-serif; margin: 0; padding: 2em; background: #f9f9f9; }
+    header { text-align: center; padding: 1em; background: #003366; color: white; }
+    header img.logo-nivelmat { max-height: 80px; margin-bottom: 0.5em; }
+    nav a { margin: 0 1em; color: white; text-decoration: none; }
+    section { max-width: 800px; margin: auto; background: white; padding: 2em; border-radius: 10px; }
+    h2 { color: #003366; }
+    ul { padding-left: 1.5em; }
+    .logos { display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; margin-bottom: 2em; }
+    .logos img { height: 60px; object-fit: contain; }
+    footer { text-align: center; margin-top: 2em; font-size: 0.9em; color: #555; }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="logo.png" class="logo-nivelmat" />
+    <h1>Contacto - NivelMat</h1>
+    <nav>
+      <a href="https://nivelmat.github.io/home/">Inicio</a>
+      <a href="https://nivelmat.github.io/preinscripcion/">Preinscripción</a>
+    </nav>
+  </header>
 
+  <div class="logos">
+    <img src="logo2.png" />
+    <img src="logo3.jpg" />
+    <img src="logo4.png" />
+    <img src="logo5.jpg" />
+  </div>
+
+  <section>
+    <h2>Contáctanos</h2>
+    <p>Para cualquier duda, puedes escribirnos a:</p>
+    <ul>
+      <li><strong>Email:</strong> <a href="mailto:nivelmat.curso@gmail.com">nivelmat.curso@gmail.com</a></li>
+    </ul>
+
+    <h2>Información para pagos</h2>
+    <p>Los pagos pueden realizarse por transferencia bancaria</p>
+
+    <h3>Cuentas bancarias para transferencias:</h3>
+    <ul>
+      <li>Banesco Banco Universal - Cuenta Corriente Nº <strong>0134-0861-11-8613000292</strong></li>
+      <li>Banco de Venezuela - Cuenta Corriente Nº <strong>0102-0525-5100-0000-0152</strong></li>
+    </ul>
+
+    <p><strong>A nombre de:</strong> Fundación Amigos de la Facultad de Ciencias – UCV (FUNDACIENS-UCV)<br>
+    <strong>RIF:</strong> J-30967561-3</p><br><br>
+    <strong>Importante:</strong> El día de la inscripción se hace la transferencia
+  </section>
+
+  <footer>
+    <p>&copy; 2025 NivelMat - Escuela de Matemática, UCV</p>
+  </footer>
+</body>
+</html>
