--- a/index.html
+++ b/index.html
@@ -1,62 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contacto - NivelMat</title>
-  <style>
-    body { font-family: sans-serif; margin: 0; padding: 2em; background: #f9f9f9; }
-    header { text-align: center; padding: 1em; background: #003366; color: white; }
-    header img.logo-nivelmat { max-height: 80px; margin-bottom: 0.5em; }
-    nav a { margin: 0 1em; color: white; text-decoration: none; }
-    section { max-width: 800px; margin: auto; background: white; padding: 2em; border-radius: 10px; }
-    h2 { color: #003366; }
-    ul { padding-left: 1.5em; }
-    .logos { display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; margin-bottom: 2em; }
-    .logos img { height: 60px; object-fit: contain; }
-    footer { text-align: center; margin-top: 2em; font-size: 0.9em; color: #555; }
-  </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>NivelMat - Curso de Nivelación Matemática</title>
+		<style>
+			:root {
+				--color-primario: #000099;
+				--color-texto: #fff;
+				--color-boton: #fff;
+				--color-boton-hover: #bb9333;
+			}
+			body {
+				margin: 0;
+				font-family: 'Segoe UI', Arial, sans-serif;
+				background: #f5f5f5;
+				color: #222;
+			}
+			.fadein {
+				opacity: 0;
+				transform: translateY(30px);
+				animation: fadein 1s ease forwards;
+			}
+			.fadein.delay1 { animation-delay: 0.2s; }
+			.fadein.delay2 { animation-delay: 0.5s; }
+			.fadein.delay3 { animation-delay: 0.8s; }
+			@keyframes fadein {
+				to {
+					opacity: 1;
+					transform: none;
+				}
+			}
+			.superior {
+				background: var(--color-primario);
+				color: var(--color-texto);
+				padding: 32px 0 24px 0;
+				text-align: center;
+				position: relative;
+			}
+			.logo-nivelmat {
+				width: 90px;
+				height: auto;
+				margin-bottom: 12px;
+			}
+			.titulo-nivelmat {
+				font-size: 2em;
+				font-weight: 700;
+				margin-bottom: 18px;
+				letter-spacing: 1px;
+			}
+			.botones-nav {
+				display: flex;
+				justify-content: center;
+				gap: 18px;
+				margin-top: 10px;
+			}
+			.boton-esferico {
+				background: var(--color-boton);
+				color: var(--color-primario);
+				border: none;
+				border-radius: 999px;
+				padding: 10px 28px;
+				font-size: 1em;
+				font-weight: 600;
+				cursor: pointer;
+				box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+				transition: background 0.2s, color 0.2s;
+			}
+			.boton-esferico:hover {
+				background: var(--color-boton-hover);
+				color: #fff;
+			}
+			@media (max-width: 600px) {
+				.superior { padding: 18px 0 12px 0; }
+				.titulo-nivelmat { font-size: 1.2em; }
+				.logo-nivelmat { width: 60px; }
+				.boton-esferico { padding: 8px 16px; font-size: 0.95em; }
+			}
+		</style>
+				<style>
+				.info-rect {
+					max-width: 800px;
+					margin: 40px auto 0 auto;
+					background: #fff;
+					border-radius: 18px;
+					box-shadow: 0 6px 32px rgba(0,0,0,0.13);
+					padding: 38px 32px 32px 32px;
+					text-align: center;
+					position: relative;
+					z-index: 2;
+				}
+				</style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" class="logo-nivelmat" />
-    <h1>Contacto - NivelMat</h1>
-    <nav>
-      <a href="https://nivelmat.github.io/home/">Inicio</a>
-      <a href="https://nivelmat.github.io/preinscripcion/">Preinscripción</a>
-    </nav>
-  </header>
-
-  <div class="logos">
-    <img src="logo2.png" />
-    <img src="logo3.jpg" />
-    <img src="logo4.png" />
-    <img src="logo5.jpg" />
-  </div>
-
-  <section>
-    <h2>Contáctanos</h2>
-    <p>Para cualquier duda, puedes escribirnos a:</p>
-    <ul>
-      <li><strong>Email:</strong> <a href="mailto:nivelmat.curso@gmail.com">nivelmat.curso@gmail.com</a></li>
-    </ul>
-
-    <h2>Información para pagos</h2>
-    <p>Los pagos pueden realizarse por transferencia bancaria</p>
-
-    <h3>Cuentas bancarias para transferencias:</h3>
-    <ul>
-      <li>Banesco Banco Universal - Cuenta Corriente Nº <strong>0134-0861-11-8613000292</strong></li>
-      <li>Banco de Venezuela - Cuenta Corriente Nº <strong>0102-0525-5100-0000-0152</strong></li>
-    </ul>
-
-    <p><strong>A nombre de:</strong> Fundación Amigos de la Facultad de Ciencias – UCV (FUNDACIENS-UCV)<br>
-    <strong>RIF:</strong> J-30967561-3</p><br><br>
-    <strong>Importante:</strong> El día de la inscripción se hace la transferencia
-  </section>
-
-  <footer>
-    <p>&copy; 2025 NivelMat - Escuela de Matemática, UCV</p>
-  </footer>
+		<div class="superior">
+			<img src="nivelmat.png" alt="Logo NivelMat" class="logo-nivelmat fadein delay1" />
+			<div class="titulo-nivelmat fadein delay2">NivelMat - Contactos</div>
+			<div class="botones-nav fadein delay3">
+				<a href="https://nivelmat.github.io/home/" style="text-decoration:none;"><button class="boton-esferico">Home</button></a>
+				<a href="https://nivelmat.github.io/preinscripcion/" style="text-decoration:none;"><button class="boton-esferico">Preinscripción</button></a>
+			</div>
+		</div>
+</div>
+	<div class="info-rect fadein delay2">
+		<!-- Aquí va la información principal -->
+		<h2 style="margin-top:0;">Contactos</h2>
+        <p>Comunicate con nosotros en caso de cualquier duda</p>
+		<p><strong>Gmail:</strong> nivelmat.curso@gmail.com</p>
+	</div>
 </body>
 </html>
