--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<img src="nivelmat.png" alt="Logo NivelMat" class="logo-nivelmat fadein delay1" />
 			<div class="titulo-nivelmat fadein delay2">NivelMat - Contactos</div>
 			<div class="botones-nav fadein delay3">
-				<a href="https://nivelmat.github.io/home/" style="text-decoration:none;"><button class="boton-esferico">Home</button></a>
+				<a href="https://nivelmat.github.io/home/" style="text-decoration:none;"><button class="boton-esferico">Inicio</button></a>
 				<a href="https://nivelmat.github.io/preinscripcion/" style="text-decoration:none;"><button class="boton-esferico">Preinscripción</button></a>
 			</div>
 		</div>
@@ -106,6 +106,7 @@
 		<!-- Aquí va la información principal -->
 		<h2 style="margin-top:0;">Contactos</h2>
         <p>Comunicate con nosotros en caso de cualquier duda</p>
+		<p><strong>Dudas:</strong> nivelmat.dudas@gmail.com</p>
 		<p><strong>Gmail:</strong> nivelmat.curso@gmail.com</p>
 	</div>
 </body>
